# template

./: .gitmodules  CMakeLists.txt  README.md
cmake/: imgui.cmake  stb.cmake
sandbox/: CMakeLists.txt
sandbox/00_hello_world/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/project/: hello_world.cpp  hello_world.h
